infra/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend-service
  ports:
    - port: 3000
      targetPort: frontend
